# Histopathologic_Cancer_Detection

./: Data_preprocessing.ipynb  README.md  explore-cancer-detection.ipynb  project1-cnn (2).ipynb  project1-cnn.ipynb  swin-transformers-version1.ipynb  swin-transformers-version2.ipynb  vgg16.ipynb
Backend/cancer_classifier/: pyproject.toml
Backend/cancer_classifier/cancer_classifier/: asgi.py  script.py  settings.py  urls.py  views.py  wsgi.py
Frontend/: package.json
Frontend/src/: App.js
